fixed spacing

--- a/src/app/backend/super-admin/super-admin.component.css
+++ b/src/app/backend/super-admin/super-admin.component.css
@@ -5,6 +5,7 @@
   right: 15px;
   bottom: 15px;
   padding: 5px;
+
 }
 
 .dashboard-card-content {
@@ -41,20 +42,38 @@
   border-bottom: 1px solid rgba(0, 0, 0, 0.3);
   border-bottom: none;
 }
+.mat-list {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0;
+}
 
+.mat-card-content {
+  display: flex;
+}
 .super-list-item .mat-list-item-content {
   display: flex;
+  flex-wrap: flex;
 
 }
 
 .super-list-item .mat-list-item-content article {
   flex: 4;
-  width: 25px;
+  width: 25vw;
+}
+
+.mat-list .mat-list-item {
+  display: flex;
+  justify-content: center;
+}
+
+.mat-list-item-content {
+  flex-wrap: wrap;
 }
 
 .mat-list-item-content p {
   flex: 1;
-
+  width: 50px;
 }
 
 .mat-list-item-content button {
@@ -73,13 +92,20 @@
   color: rgba(11, 57, 84, 1);
 }
 
+.mat-list p {
+  width: 25vw;
+}
+
 button {
-  border-radius: 2px;
+  border-radius: 20px;
   background-color: #B1BAC3;
   color: #FFFFFF;
   Font Family: Quando;
   font-size: 15px;
   height: 75px;
+  padding-right: 75px;
+  padding-left: 75px;
+  margin-left: 15vw !important;
 }
 
 select {
@@ -90,6 +116,15 @@ select {
   font-size: 2vw;
 }
 
+.mat-form-field-infix {
+  text-transform: capitalize;
+}
+
+article {
+  display: flex;
+}
+
 p {
   color: rgba(11, 57, 84, 1);
+  flex-wrap: wrap;
 }
